# ImageCube-1

./: .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  requirements.txt
docs/imagecube/: index.rst
docs/imagecube/functions/: imagecube1.resample_images.rst
imagecube/: __init__.py  eq  example_mod.py  imagecube1.py  imagecube_constants.py
imagecube/example_subpkg/: setup_package.py
licenses/: LICENSE.rst
