[metadata]
name = imagecube
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.dev
author = a common angular resolution, and regridding to a specified pixel size. Rishab Khincha
author_email = rhemantk@uwo.ca
description = Imagecube processes multi-wavelength astronomical imaging datasets, performing 
long_description = conversion to common flux units,  registration to a common WCS, convolution to
license = BSD 3-Clause
url = http://docs.astropy.org/projects/package-template/
edit_on_github = True
github_project = astropy/astropy
python_requires = ">=3.5"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy
zip_safe = False
use_2to3 = False

[options.entry_points]
console_scripts =
    
    astropy-package-template-example = packagename.example_mod:main
    

[options.package_data]
* = *.c
imagecube = data/*
imagecube.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
